with the latest versions of Password Safe. For a short description of
Password Safe, please see the accompanying README.txt file. For more 
information on the product and the project, please visit
http://passwordsafe.sourceforge.net. Details about changes to older
releases may be found in the file ChangeLog.txt.

Bugs fixed in 3.20.1
====================
[2913440] Copy/Send Email menu items now correctly activated if email field
is set or 'mailto:' used in URL field.
[2912177] Restore 'Add Group' menu item to context menu when clicking
on an entry and allow new group to remain unchanged.
[] Finally fix issues running under pre-XP versions of Windows.

New Features for 3.20.1
=======================


Changes to Existing Features in 3.20.1
======================================


Bugs fixed in 3.20
==================
[2906249] User changes to List view's column order are now persistent.
[2905961] ESC key now works correctly in View Entry when in RO mode.
[2873106] Export XML warnings now consistent with Export Text's.
[2872829] Duplicating an entry now copies the password policy as well.
[2872602] Preferences are now correctly deleted from the Windows registry
if they match the default (when registry is enabled).
[2870059] When an entry is highlighted during Find, the Toolbar and menu
items now reflect its contents.
[2868278] Minimize via the system menu, SystemTray menu and system control
box button now locks the database if the preference 'Lock on Minimize' is
set.
[2868244] Change font dialogs now work again.
[] Import from a text file with non-Latin text now works correctly.
[] No longer complains about WTS service in pre-XP versions of Windows.
[] Filters containing tests on the entry type are now correctly
exported to XML.
[] Validate of Password History (-v command line flag) now removes
history fields with invalid dates or empty old password fields.
[] Fix match test 'does not begin with' - used in filters and restricting
entries exported to Text or XML.