@@ -10,6 +10,7 @@ releases may be found in the file ChangeLog.txt.
 
 Bugs fixed in 3.20.1
 ====================
+[2916338] "Edit Base entry" now works for Alias entries as well as for Shortcuts.
 [2913440] Copy/Send Email menu items now correctly activated if email field
 is set or 'mailto:' used in URL field.
 [2912177] Restore 'Add Group' menu item to context menu when clicking
